<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundaActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:shadowColor="@color/black"
        android:text="@string/titulo2"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtpregunta2"
        android:layout_width="372dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:shadowColor="#2196F3"
        android:text="@string/pregunta2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextSizeCheck" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="336dp"
        android:layout_height="216dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpregunta2">

        <RadioButton
            android:id="@+id/rbrespuesta1de2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repuesta1de2" />

        <RadioButton
            android:id="@+id/rbrespuesta2de2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repuesta2de2" />

        <RadioButton
            android:id="@+id/respuesta3de2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repuesta3de2" />
    </RadioGroup>

    <Button
        android:id="@+id/btnverifica2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/verifica2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/btncalificar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="76dp"
        android:text="@string/calificar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/btnatras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="160dp"
        android:text="@string/atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

</androidx.constraintlayout.widget.ConstraintLayout>